  options start with ~=~.  You can restore the previous bindings with

  #+begin_src emacs-lisp
  (transient-suffix-put 'magit-annex-sync "-j" :key "=j")
  (transient-suffix-put 'magit-annex-file-action "-j" :key "=j")
  (transient-suffix-put 'magit-annex-file-action "-n" :key "=n")
  (transient-suffix-put 'magit-annex-unused "-r" :key "=r")
  #+end_src

* 1.7.0

Magit-annex has been updated for the latest version of Magit and now
requires version 2.90.0 or later.

* 1.6.0

** New features

- File action commands now support Dired buffers.  The file at point
  (or marked files) is used as the default for completion.

  Consider binding ~magit-annex-file-action-popup~ to a key in Dired
  buffers.  If you are using git-annex.el, you can bind the popup to
  ~@f~ like this:

  #+begin_src emacs-lisp
  (define-key git-annex-dired-map "f" #'magit-annex-file-action-popup)
  #+end_src

- In ~magit-annex-list-mode~ buffers, file action commands now
  consider files selected by the region when choosing a default for
  completion.

- ~git annex undo~ is now exposed via ~magit-annex-undo-files~, a new
  command available in ~magit-annex-file-action-popup~.

** Interface changes

- ~magit-annex-list-popup~ now invokes the popup rather than the
  default action when called without a prefix.

  You can restore the previous behavior with

  #+begin_src emacs-lisp
  (setq magit-annex-list-popup
        (plist-put magit-annex-list-popup :use-prefix 'popup))
  #+end_src

* 1.5.0

Magit-annex has been updated for the latest version of Magit and now
requires version 2.12.0 or later.

* 1.4.0

Magit-annex has been updated for the latest version of Magit and now
requires version 2.11.0 or later.

** Interface changes

- Starting with Magit 2.11.0, the commands ~magit-git-command~ and
  ~magit-git-command-topdir~ add "git " to the initial input rather
  than prepending it to the input after it is read.  This change
  enables arbitrary shell commands to be executed.  Similarly, the